# holonomic-robot-console

./: .gitignore  NOTICE  Package.swift  README.md  start.sh
Sources/App/: AppIcon.swift  ContentView.swift  RobotConsoleApp.swift  main.swift
Sources/App/Lidar/: LidarModel.swift  ScanProcessing.swift
Sources/App/Map/: MapModel.swift
Sources/App/Pi/: PiControl.swift
Sources/App/RosBridge/: RosBridgeClient.swift  RosMessages.swift
Sources/App/Teleop/: TeleopController.swift
Sources/App/Views/: ConnectionBar.swift  LidarView.swift  MapView.swift  OpsPanel.swift  RootView.swift  TeleopPanel.swift
pi/: README.md  deploy.sh
pi/ominibot_driver/: package.xml  setup.py
pi/ominibot_driver/ominibot_driver/: ominibot_node.py  ominibot_protocol.py
pi/ominibot_driver/reference/: OminiBot_HV_Meca.py
pi/robot_bringup/: package.xml  setup.py
pi/robot_bringup/config/: nav2_params.yaml  slam_params.yaml
pi/robot_bringup/launch/: bringup.launch.py  nav2.launch.py  slam.launch.py
pi/robot_bringup/scripts/: robot.sh  save_map.sh
pi/systemd/: ominibot.service  rosbridge.service  sllidar.service
pi/udev/: 99-robot.rules
tools/: mock_rosbridge.py
