<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ominibot_driver</name>
  <version>0.1.0</version>
  <description>Ominibot HV 萬向輪底盤驅動:訂閱 /cmd_vel 轉串列協定指令,含逾時自動停車</description>
  <maintainer email="jarry050599@gmail.com">jarry</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-serial</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
